kubernetes/deployment-green.yaml
# deployment-green.yaml
# Versión "green" — la nueva versión pendiente de activar
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techwave-app-green
  namespace: techwave
  labels:
    app: techwave-app
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techwave-app
      version: green
  template:
    metadata:
      labels:
        app: techwave-app
        version: green
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: techwave-app
          image: javrip/techwave-app:d2208dc
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
