kubernetes/networkpolicy-techwave.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: techwave-policy
  namespace: techwave
spec:
  podSelector: {}    # A qué pods aplica (vacío = todos)
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx			  
      ports:
        - port: 5000
